--- a/html/main.css
+++ b/html/main.css
@@ -346,6 +346,138 @@
   margin-right: 20px;
 }
 
+/*!******************************************************************************************************************************************************************************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??clonedRuleSet-1.use[1]!./node_modules/vue-loader/dist/stylePostLoader.js!./node_modules/stylus-loader/dist/cjs.js??clonedRuleSet-1.use[2]!./node_modules/vue-loader/dist/index.js??ruleSet[1].rules[5].use[0]!./src/components/modal.vue?vue&type=style&index=0&id=0eaeaf66&lang=stylus&scoped=true ***!
+  \******************************************************************************************************************************************************************************************************************************************************************************************************************************************************/
+.popup[data-v-0eaeaf66] {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: fixed;
+  top: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+}
+.popup .content-key[data-v-0eaeaf66] {
+  padding: 40px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 760px;
+}
+.popup .content-sell[data-v-0eaeaf66] {
+  padding: 40px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 390px;
+}
+
+/*!******************************************************************************************************************************************************************************************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??clonedRuleSet-1.use[1]!./node_modules/vue-loader/dist/stylePostLoader.js!./node_modules/stylus-loader/dist/cjs.js??clonedRuleSet-1.use[2]!./node_modules/vue-loader/dist/index.js??ruleSet[1].rules[5].use[0]!./src/components/public-key-dialog.vue?vue&type=style&index=0&id=2c61017a&scoped=true&lang=stylus ***!
+  \******************************************************************************************************************************************************************************************************************************************************************************************************************************************************************/
+.key__title[data-v-2c61017a] {
+  font-size: 18px;
+  font-weight: bold;
+  color: #fff;
+}
+.key__data[data-v-2c61017a] {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.key__data .copy-icon[data-v-2c61017a] {
+  margin-left: 10px;
+  cursor: pointer;
+}
+.key__controls[data-v-2c61017a] {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: row;
+}
+
+/*!*************************************************************************************************************************************************************************************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??clonedRuleSet-1.use[1]!./node_modules/vue-loader/dist/stylePostLoader.js!./node_modules/stylus-loader/dist/cjs.js??clonedRuleSet-1.use[2]!./node_modules/vue-loader/dist/index.js??ruleSet[1].rules[5].use[0]!./src/components/price-dialog.vue?vue&type=style&index=0&id=00d0ac5c&scoped=true&lang=stylus ***!
+  \*************************************************************************************************************************************************************************************************************************************************************************************************************************************************************/
+.sell__title[data-v-00d0ac5c] {
+  font-size: 18px;
+  font-weight: bold;
+  color: #fff;
+}
+.sell__input[data-v-00d0ac5c] {
+  margin-top: 20px;
+  height: 45px;
+  width: 100%;
+  border-radius: 10px;
+  background-color: rgba(255,255,255,0.05);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.sell__input .input__elem[data-v-00d0ac5c] {
+  background: rgba(255,255,255,0);
+  border: none;
+  font-size: 24px;
+  resize: none;
+  color: #0bccf7;
+  height: 100%;
+  padding: 0;
+  border-radius: 10px;
+  padding: 8px;
+  max-width: 292px;
+}
+.sell__input .input__elem[data-v-00d0ac5c]:focus {
+  outline-width: 0;
+  color: #0bccf7;
+}
+.sell__input .input__elem[data-v-00d0ac5c]::placeholder {
+  color: #0bccf7;
+}
+.sell__input .input__text[data-v-00d0ac5c] {
+  margin-right: 8px;
+  font-size: 16px;
+  margin-left: auto;
+  color: #fff;
+}
+.sell__fee[data-v-00d0ac5c] {
+  display: flex;
+  flex-direction: row;
+  margin-top: 20px;
+  align-self: flex-start;
+}
+.sell__fee .fee__title[data-v-00d0ac5c] {
+  opacity: 0.5;
+  font-size: 12px;
+  color: #fff;
+}
+.sell__fee .fee__value[data-v-00d0ac5c] {
+  font-size: 14px;
+  font-weight: 500;
+  color: #0bccf7;
+  margin-left: 10px;
+}
+.sell__info[data-v-00d0ac5c] {
+  margin-top: 30px;
+  opacity: 0.7;
+  font-size: 14px;
+  font-style: italic;
+  color: #fff;
+}
+.sell__controls[data-v-00d0ac5c] {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: row;
+}
+.disabled[data-v-00d0ac5c] {
+  opacity: 0.3;
+  cursor: auto !important;
+}
+
 /*!**********************************************************************************************************************************************************************************************************************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??clonedRuleSet-1.use[1]!./node_modules/vue-loader/dist/stylePostLoader.js!./node_modules/stylus-loader/dist/cjs.js??clonedRuleSet-1.use[2]!./node_modules/vue-loader/dist/index.js??ruleSet[1].rules[5].use[0]!./src/components/paginator.vue?vue&type=style&index=0&id=5f72e89e&lang=stylus&scoped=true ***!
   \**********************************************************************************************************************************************************************************************************************************************************************************************************************************************************/
@@ -817,11 +949,6 @@ html {
     margin-left: 0.5em;
 }
 
-.disabled {
-    opacity: 0.3;
-    cursor: auto !important;
-}
-
 .button {
     padding: 11px 25px;
     border-radius: 50px;
@@ -876,138 +1003,6 @@ html {
     font-size: 12px;
     margin-left: 10px;
 }
-
-.popup {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    position: fixed;
-    top: 0px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 100;
-}
-
-.popup .popup__content-key{
-    padding: 40px;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 760px;
-}
-
-.popup__content-sell__title,
-.popup__content-key__title {
-    font-size: 18px;
-    font-weight: bold;
-    color: #fff;
-}
-
-.popup__content-key__data {
-    margin-top: 30px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.popup__content-key__data .copy-icon {
-    margin-left: 10px;
-    cursor: pointer;
-}
-
-.popup__content-key__controls {
-    margin-top: 30px;
-    display: flex;
-    flex-direction: row;
-}
-
-.popup .popup__content-sell {
-    padding: 40px;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 390px;
-}
-
-.popup__content-sell__input {
-    margin-top: 20px;
-    height: 45px;
-    width: 100%;
-    border-radius: 10px;
-    background-color: rgba(255, 255, 255, .05);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.popup__content-sell__input__elem {
-    background: rgba(255, 255, 255, 0);
-    border: none;
-    font-size: 24px;
-    resize: none;
-    color: #0bccf7;
-    height: 100%;
-    padding: 0;
-    border-radius: 10px;
-    padding: 8px;
-    max-width: 292px;
-}
-
-.popup__content-sell__input__elem:focus {
-    outline-width: 0;
-    color: #0bccf7;
-}
-
-.popup__content-sell__input__elem::placeholder {
-    color: #0bccf7;
-}
-
-.popup__content-sell__input__text {
-    margin-right: 8px;
-    font-size: 16px;
-    margin-left: auto;
-    color: #ffffff;
-}
-
-.popup__content-sell__controls {
-    margin-top: 30px;
-    display: flex;
-    flex-direction: row;
-}
-
-.popup__content-sell__info {
-    margin-top: 30px;
-    opacity: 0.7;
-    font-size: 14px;
-    font-style: italic;
-    color: #fff;
-}
-
-.popup__content-sell__fee {
-    display: flex;
-    flex-direction: row;
-    margin-top: 20px;
-    align-self: flex-start;
-}
-
-.popup__content-sell__fee__title {
-    opacity: 0.5;
-    font-size: 12px;
-    color: #fff;
-}
-
-.popup__content-sell__fee__value {
-    font-size: 14px;
-    font-weight: 500;
-    color: #0bccf7;
-    margin-left: 10px;
-}
-
-
-
 
 .selectHide {
     display: none;
