--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -57,5 +57,5 @@ html, body {
 }
 
 .error {
-  color: rgba(255, 98, 92, 0.7)
+  filter: grayscale(100%) brightness(40%) sepia(100%) hue-rotate(-50deg) saturate(600%) contrast(0.8);
 }
