--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,17 +6,7 @@ html, body {
   overflow:    hidden;
   margin:      0;
   color:       white;
-}
-
-.vertical-container {
-  display: flex; 
-  flex-direction: column;
-  width:  100%;
-  height: 100%;
-}
-
-.web .vertical-container {
-  height: 85%;
+  box-sizing:  border-box;
 }
 
 .pointer-cursor {
