--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -49,3 +49,12 @@ html, body {
 .error {
   filter: grayscale(100%) brightness(40%) sepia(100%) hue-rotate(-50deg) saturate(600%) contrast(0.8);
 }
+
+.link {
+  cursor: pointer;
+  color: rgba(0, 246, 210, 1);
+}
+
+.link:hover {
+  text-decoration: underline;
+}
